add opens; loose